--- a/styles/article/blocks/media/video.scss
+++ b/styles/article/blocks/media/video.scss
@@ -36,8 +36,9 @@
   overflow: hidden;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+ 
 
   video {
     border-radius: 6px;
